--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    spelling
+    spelling,
+    remotes
 Language: en-GB
 Imports: 
     fafbseg (>= 0.9.4),
