--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,3 +35,5 @@ Remotes:
 RoxygenNote: 7.1.2
 URL: https://github.com/flyconnectome/malecns
 BugReports: https://github.com/flyconnectome/malecns/issues
+Depends: 
+    R (>= 2.10)
