--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Remotes:
     natverse/nat.templatebrains,
     natverse/neuprintr
 RoxygenNote: 7.1.2
-URL: https://github.com/flyconnectome/malecns
+URL: https://github.com/flyconnectome/malecns,
+    https://flyconnectome.github.io/malecns/
 BugReports: https://github.com/flyconnectome/malecns/issues
 Depends: 
     R (>= 2.10)
