make sure nat system deps are present
* from https://github.com/natverse/natmanager/blob/4cc27cd037c6e558601195ddb3f0ad1e1a2e3289/.github/workflows/R-CMD-check.yaml

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -28,6 +28,24 @@ jobs:
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
 
+      - name: Install system dependencies/r
+        if: runner.os == 'Linux'
+        run: |
+          install.packages('pak')
+          pak::local_system_requirements(execute = TRUE)
+          pak::pkg_system_requirements("rcmdcheck", execute = TRUE)
+        shell: Rscript {0}
+
+      - name: Install system dependencies/bash
+        run:   |
+         if [ "$RUNNER_OS" == "Linux" ]; then
+              sudo apt-get update -y
+              sudo apt-get install -y libglpk-dev
+         else
+              echo "$RUNNER_OS no specific install required"
+         fi
+        shell: bash
+
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
