--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -28,15 +28,13 @@ jobs:
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
 
-      - name: Install system dependencies/bash
-        run:   |
-         if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get update -y
-              sudo apt-get install -y libglpk-dev
-         else
-              echo "$RUNNER_OS no specific install required"
-         fi
-        shell: bash
+      - name: Install system dependencies
+        if: runner.os == 'Linux'
+        run: |
+          while read -r cmd
+          do
+            eval sudo $cmd
+          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
 
       - name: Install dependencies
         run: |
