--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -14,6 +14,13 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GJPAT }}
       R_KEEP_PKG_SOURCE: yes
+      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+      RGL_USE_NULL: TRUE
+      _R_CHECK_DONTTEST_EXAMPLES_: FALSE
+      _R_CHECK_TESTS_NLINES_: 0
+      neuprint_token: ${{ secrets.NEUPRINT_TOKEN }}
+      CLIO_TOKEN: ${{ secrets.CLIO_TOKEN }}
+
     steps:
       - uses: actions/checkout@v2
 
