Add jose as suggested package to work around malevnc loading issue
* It's effectively required for clio auth

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Encoding: UTF-8
 LazyData: true
 Suggests: 
     spelling,
-    remotes
+    remotes,
+    jose
 Language: en-GB
 Imports: 
     fafbseg (>= 0.9.4),
