--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -62,4 +62,4 @@ jobs:
         run: |
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          Rscript -e 'devtools::install() && pkgdown::deploy_to_branch(new_process = FALSE)'
+          Rscript -e 'devtools::install(); pkgdown::deploy_to_branch(new_process = FALSE)'
