--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(mcns_scene)
 export(mcns_xyz2bodyid)
 export(read_mcns_meshes)
 export(with_mcns)
+importFrom(glue,glue)
 importFrom(nat,xyzmatrix)
