--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,4 +39,5 @@ URL: https://github.com/flyconnectome/malecns,
     https://flyconnectome.github.io/malecns/
 BugReports: https://github.com/flyconnectome/malecns/issues
 Depends: 
-    R (>= 2.10)
+    R (>= 2.10),
+    nat
