--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(mcns_neuprint)
 export(mcns_scene)
 export(mcns_xyz2bodyid)
 export(read_mcns_meshes)
+export(read_mcns_neurons)
 export(with_mcns)
 importFrom(glue,glue)
+importFrom(nat,boundingbox)
 importFrom(nat,xyzmatrix)
