--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports:
     malevnc (>= 0.2.1),
     nat.templatebrains (>= 1.0),
     pbapply,
-    neuprintr,
+    neuprintr (>= 1.3),
     glue
 Remotes: 
     flyconnectome/malevnc,
