--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(choose_mcns)
 export(dr_malecns)
 export(mcns_connection_table)
+export(mcns_dvid_annotations)
 export(mcns_neuprint)
+export(mcns_neuprint_meta)
 export(mcns_scene)
 export(mcns_xyz2bodyid)
 export(read_mcns_meshes)
