--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(mcns_dvid_annotations)
 export(mcns_neuprint)
 export(mcns_neuprint_meta)
 export(mcns_scene)
+export(mcns_set_dvid_annotations)
 export(mcns_xyz2bodyid)
 export(mirror_malecns)
 export(read_mcns_meshes)
