--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,6 @@ Language: en-GB
 Imports: 
     fafbseg (>= 0.9.4),
     jsonlite,
-    nat (>= 1.10.2.9000),
     malevnc (>= 0.2.2),
     nat.templatebrains (>= 1.0),
     pbapply,
@@ -43,5 +42,5 @@ URL: https://github.com/flyconnectome/malecns,
 BugReports: https://github.com/flyconnectome/malecns/issues
 Depends: 
     R (>= 2.10),
-    nat
+    nat (>= 1.10.2.9000)
 Config/testthat/edition: 3
