--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,28 @@
 url: https://flyconnectome.github.io/malecns/
 template:
   bootstrap: 5
-
+reference:
+- title: Package overview, setup and general functions
+  contents:
+  - '`malecns`'
+  - '`dr_malecns`'
+  - '`with_mcns`'
+  - '`mcns_scene`'
+  - '`mcns_xyz2bodyid`'
+- title: Neuprint queries including connectivity
+  contents:
+  - '`mcns_neuprint`'
+  - '`mcns_neuprint_meta`'
+  - '`mcns_connection_table`'
+- title: Neuron skeletons and meshes
+  contents:
+  - '`read_mcns_meshes`'
+  - '`read_mcns_neurons`'
+- title: DVID Annotations
+  contents:
+  - '`mcns_dvid_annotations`'
+  - '`mcns_set_dvid_annotations`'
+- title: Geometry and neuropil meshes
+  contents:
+  - '`mirror_malecns`'
+  - '`malecns_shell.surf`'
