--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     pbapply,
     neuprintr (>= 1.3),
     glue,
-    checkmate
+    checkmate,
+    dplyr
 Remotes: 
     flyconnectome/malevnc,
     natverse/fafbseg,
