mcns_annotate_body - fixed docs again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(read_mcns_meshes)
 export(read_mcns_neurons)
 export(with_mcns)
 importFrom(glue,glue)
+importFrom(malevnc,manc_annotate_body)
 importFrom(nat,boundingbox)
 importFrom(nat,xyzmatrix)
