Add function to predict cell type groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(mcns_dvid_annotations)
 export(mcns_ids)
 export(mcns_neuprint)
 export(mcns_neuprint_meta)
+export(mcns_predict_group)
 export(mcns_scene)
 export(mcns_set_dvid_annotations)
 export(mcns_xyz2bodyid)
@@ -15,6 +16,12 @@ export(mirror_malecns)
 export(read_mcns_meshes)
 export(read_mcns_neurons)
 export(with_mcns)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,.data)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,ungroup)
 importFrom(glue,glue)
 importFrom(malevnc,manc_annotate_body)
 importFrom(nat,boundingbox)
