--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,10 +28,12 @@ Imports:
     malevnc (>= 0.2.7),
     nat.templatebrains (>= 1.0),
     pbapply,
-    neuprintr (>= 1.3),
+    neuprintr (>= 1.3.1.9000),
     glue,
     checkmate,
-    dplyr
+    dplyr,
+    coconat,
+    stringr
 Remotes: 
     flyconnectome/malevnc,
     natverse/fafbseg,
