--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(choose_mcns)
 export(dr_malecns)
 export(mcns_annotate_body)
 export(mcns_connection_table)
+export(mcns_cosine_plot)
 export(mcns_dvid_annotations)
 export(mcns_ids)
 export(mcns_neuprint)
