--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -15,6 +15,8 @@ reference:
   - '`mcns_neuprint`'
   - '`mcns_neuprint_meta`'
   - '`mcns_connection_table`'
+  - '`mcns_cosine_plot`'
+  - '`mcns_predict_group`'
 - title: Neuron skeletons and meshes
   contents:
   - '`read_mcns_meshes`'
