--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(mcns_predict_group)
 export(mcns_scene)
 export(mcns_set_dvid_annotations)
 export(mcns_soma_side)
+export(mcns_somapos)
 export(mcns_xyz2bodyid)
 export(mirror_malecns)
 export(read_mcns_meshes)
