--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Language: en-GB
 Imports: 
     fafbseg (>= 0.9.4),
     jsonlite,
-    malevnc (>= 0.2.7),
+    malevnc (> 0.2.7),
     nat.templatebrains (>= 1.0),
     pbapply,
     neuprintr (>= 1.3.1.9000),
