--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,7 @@ Imports:
     glue,
     checkmate,
     dplyr,
-    coconat (>= 0.1.1),
+    coconat (> 0.1.1),
     stringr
 Remotes: 
     flyconnectome/malevnc,
