--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(mcns_ids)
 export(mcns_neuprint)
 export(mcns_neuprint_meta)
 export(mcns_predict_group)
+export(mcns_predict_type)
 export(mcns_scene)
 export(mcns_set_dvid_annotations)
 export(mcns_soma_side)
@@ -22,6 +23,7 @@ export(read_mcns_neurons)
 export(with_mcns)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,.data)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
