--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(mcns_connection_table)
 export(mcns_cosine_plot)
 export(mcns_dvid_annotations)
 export(mcns_ids)
+export(mcns_islatest)
 export(mcns_neuprint)
 export(mcns_neuprint_meta)
 export(mcns_predict_group)
