--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,7 @@ Imports:
     coconat (> 0.1.1),
     stringr
 Remotes: 
-    flyconnectome/malevnc,
+    natverse/malevnc,
     natverse/fafbseg,
     natverse/nat,
     natverse/nat.templatebrains,
