--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,7 @@ Remotes:
     natverse/nat,
     natverse/nat.templatebrains,
     natverse/neuprintr,
-    natverse/rcatmaid,
+    catmaid=natverse/rcatmaid,
     natverse/nat.h5reg,
     natverse/coconat
 RoxygenNote: 7.2.3
