--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Suggests:
 Language: en-GB
 Imports: 
     fafbseg (>= 0.9.4),
-    malevnc (> 0.2.9),
+    malevnc (>= 0.3.0),
     nat.templatebrains (>= 1.0),
     pbapply,
     neuprintr (>= 1.3.1.9000),
