--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
 importFrom(dplyr,ungroup)
 importFrom(glue,glue)
 importFrom(malevnc,manc_annotate_body)
