more namespace fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,3 +34,4 @@ importFrom(glue,glue)
 importFrom(malevnc,manc_annotate_body)
 importFrom(nat,boundingbox)
 importFrom(nat,xyzmatrix)
+importFrom(stats,na.omit)
