--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: malecns
 Type: Package
 Title: Access to the latest 'Janelia FlyEM' datasets
-Version: 0.3.0.9900
+Version: 0.3.1
 Authors@R:
     c(person(given = "Gregory",
            family = "Jefferis",
@@ -26,7 +26,7 @@ Suggests:
 Language: en-GB
 Imports: 
     fafbseg (>= 0.9.4),
-    malevnc (>= 0.3.0),
+    malevnc (> 0.3.1.9000),
     nat.templatebrains (>= 1.0),
     pbapply,
     neuprintr (>= 1.3.1.9000),
