--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,8 +34,7 @@ Imports:
     checkmate,
     dplyr,
     coconat (> 0.1.1),
-    stringr,
-    nat
+    stringr
 Remotes: 
     natverse/malevnc,
     natverse/fafbseg,
