pkgdown: add missing choose_mcns_dataset topic

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,6 +6,7 @@ reference:
   contents:
   - '`malecns`'
   - '`dr_malecns`'
+  - '`choose_mcns_dataset`'
   - '`with_mcns`'
   - '`mcns_scene`'
 - title: Specify and check body ids
